hphp/hack/test/typecheck/abstract_typeconsts/multiple-definitions/trait_require_extends_implements_bounds_not_subtypes.php.exp
ERROR: File "trait_require_extends_implements_bounds_not_subtypes.php", line 33, characters 28-39:
Invalid type hint (Typing[4090])
  File "trait_require_extends_implements_bounds_not_subtypes.php", line 33, characters 38-39:
  No type constant `T3` in `UpperBound1`
  File "trait_require_extends_implements_bounds_not_subtypes.php", line 3, characters 11-21:
  Declaration of `UpperBound1` is here
ERROR: File "trait_require_extends_implements_bounds_not_subtypes.php", line 39, characters 28-39:
Invalid type hint (Typing[4090])
  File "trait_require_extends_implements_bounds_not_subtypes.php", line 39, characters 38-39:
  No type constant `T2` in `UpperBound2`
  File "trait_require_extends_implements_bounds_not_subtypes.php", line 7, characters 11-21:
  Declaration of `UpperBound2` is here
